--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </h1>
         <div class="card-container">
             <div class="card">
-                <img src="" alt="profile pic1">
+                <img src="https://images.unsplash.com/photo-1617150346290-1b7c9207a549?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGZsb3dlcnN8ZW58MHwyfDB8fHww" alt="profile pic1">
                 <h2>Agnes Ng'ang'a</h2>
                 <h3>Web development student</h3>
                 <p>I am learning HTML and CSS</p>
