--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="card-container">
             <div class="card member3-card">
                 <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bmF0dXJlfGVufDB8fDB8fHww" alt="profile pic3">
-                <h2>Ephrahim</h2>
-                <h3>Web development student</h3>
-                <p>I am learning HTML and CSS</p>
+                <h2>Ebrahim Ogejo</h2>
+                <h3>Web Development student</h3>
+                <p>Passionate about Web Development, creating clean, efficient code and scalable applications.</p>
                 <a href="#" class="btn">Contact</a>
             </div>
           
